# bus-departures-sign-firmware

./: .gitignore  Makefile  README.md  requirements.txt  terminal.sh  upload.sh
bus-departures-cli/: api.py  bus_departures_cli.py  config_template.py  departure_time_info.py  display.py  display_epd.py  display_hosted.py  led.py  main.py  wdt.py  wifi.py  wifi_credentials_template.py
bus-departures-cli/gui/: color_setup.py
bus-departures-cli/gui/core/: colors.py  nanogui.py
bus-departures-cli/micropython-nano-gui/drivers/: ePaper2in9.py
bus-departures-cli/micropython_nano_gui/drivers/: ePaper2in9.py
bus-departures-rs/: Cargo.toml
bus-departures-rs/src/: api.rs  main.rs
