[package]
name = "bus-departures-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi-escapes = "0.1.1"
enable-ansi-support = "0.2.1"
lazy_static = "1.4.0"
regex = "1.8.1"
reqwest = {version = "0.11.16", features = ["blocking"]}
tabled = "0.12.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }
